--- a/BankClient/MainWindow.xaml
+++ b/BankClient/MainWindow.xaml
@@ -11,21 +11,21 @@
             <Label Content="Numer konta:" HorizontalAlignment="Left" Margin="247,172,0,0" VerticalAlignment="Top"/>
             <Label Content="Pin:" HorizontalAlignment="Left" Margin="247,203,0,0" VerticalAlignment="Top"/>
             <TextBox x:Name="textboxAccountNumber" HorizontalAlignment="Left" Height="23" Margin="355,176,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120"/>
-            <TextBox x:Name="textboxPin" HorizontalAlignment="Left" Height="23" Margin="355,207,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120"/>
             <Label x:Name="labelLoginError" Content="Label" HorizontalAlignment="Left" Margin="355,235,0,0" VerticalAlignment="Top"/>
             <Button x:Name="buttonLogin" Content="Zaloguj" HorizontalAlignment="Left" Margin="380,266,0,0" VerticalAlignment="Top" Width="75" Click="ButtonLogin_Click"/>
+            <PasswordBox x:Name="textboxPin" HorizontalAlignment="Left" Margin="355,211,0,0" VerticalAlignment="Top" Width="120"/>
         </Grid>
-        <Grid x:Name="gridClientPanel" HorizontalAlignment="Left" Height="400" Margin="10,10,0,0" VerticalAlignment="Top" Width="774">
+        <Grid x:Name="gridClientPanel" HorizontalAlignment="Left" Height="400" Margin="10,10,0,0" VerticalAlignment="Top" Width="774" Visibility="Visible">
             <Label Content="Stan konta: " HorizontalAlignment="Left" Margin="66,49,0,0" VerticalAlignment="Top"/>
             <Label x:Name="labelAccountBalance" Content="Label" HorizontalAlignment="Left" Margin="143,49,0,0" VerticalAlignment="Top"/>
             <Label Content="Kwota:" HorizontalAlignment="Left" Margin="208,165,0,0" VerticalAlignment="Top"/>
             <Label Content="Numer konta: " HorizontalAlignment="Left" Margin="208,196,0,0" VerticalAlignment="Top"/>
             <TextBox x:Name="textboxAmount" HorizontalAlignment="Left" Height="23" Margin="313,169,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120"/>
             <TextBox x:Name="textboxTargetNumber" HorizontalAlignment="Left" Height="23" Margin="313,200,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120"/>
-            <Button x:Name="buttonRefresh" Content="Odśwież" HorizontalAlignment="Left" Margin="164,258,0,0" VerticalAlignment="Top" Width="75" Click="ButtonRefresh_Click"/>
-            <Button x:Name="buttonDeposit" Content="Wpłać pieniądze" HorizontalAlignment="Left" Margin="263,258,0,0" VerticalAlignment="Top" Width="75" Click="ButtonDeposit_Click"/>
-            <Button x:Name="buttonWithdraw" Content="Wypłać pieniądze" HorizontalAlignment="Left" Margin="358,258,0,0" VerticalAlignment="Top" Width="75" Click="ButtonWithdraw_Click"/>
-            <Button x:Name="buttonTransfer" Content="Wykonaj przelew" HorizontalAlignment="Left" Margin="468,258,0,0" VerticalAlignment="Top" Width="75" Click="ButtonTransfer_Click"/>
+            <Button x:Name="buttonRefresh" Content="Odśwież" HorizontalAlignment="Left" Margin="164,258,0,0" VerticalAlignment="Top" Width="94" Click="ButtonRefresh_Click" Height="56"/>
+            <Button x:Name="buttonDeposit" Content="Wpłać pieniądze" HorizontalAlignment="Left" Margin="263,258,0,0" VerticalAlignment="Top" Width="94" Click="ButtonDeposit_Click" Height="56"/>
+            <Button x:Name="buttonWithdraw" Content="Wypłać pieniądze" HorizontalAlignment="Left" Margin="362,258,0,0" VerticalAlignment="Top" Width="100" Click="ButtonWithdraw_Click" Height="56"/>
+            <Button x:Name="buttonTransfer" Content="Wykonaj przelew" HorizontalAlignment="Left" Margin="467,258,0,0" VerticalAlignment="Top" Width="94" Click="ButtonTransfer_Click" Height="56"/>
             <Button x:Name="buttonLogout" Content="Wyloguj" HorizontalAlignment="Left" Margin="644,169,0,0" VerticalAlignment="Top" Width="75" Click="ButtonLogout_Click"/>
             <Label x:Name="labelClientError" Content="Label" HorizontalAlignment="Left" Margin="490,205,0,0" VerticalAlignment="Top"/>
             <Label x:Name="labelCurrency" Content="Label" HorizontalAlignment="Left" Margin="143,75,0,0" VerticalAlignment="Top"/>
